# tendermint-validator

./: .dockerignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
Licenses/: scs_LICENSE.md
cmd/signer/: main.go
internal/signer/: Config.go  KeyUtils.go  NodeClient.go  PvGuard.go  Serialization.go
licenses/: ASF_LICENSE.md
packaging_docker/: signer_init.sh
packaging_docker/tendermint-validator/: config.toml
packaging_ubuntu/: control  postinst  postrm
packaging_ubuntu/opt/tendermint-validator/: config.toml
tee_validator/: Makefile  validator.go
tee_validator/app/: Cargo.toml
tee_validator/app/src/: consts.rs  enclave_api.rs  lib.rs
tee_validator/enclave/: Cargo.toml  Enclave.config.release.xml  Enclave.edl  Makefile  Xargo.toml
tee_validator/enclave/src/: aes.rs  consts.rs  ed25519.rs  fs.rs  lib.rs  password.rs  utils.rs
tee_validator/go-bridge/: Cargo.toml  Makefile  build.rs
tee_validator/go-bridge/api/: lib.go
tee_validator/go-bridge/src/: error.rs  lib.rs
tee_validator/xargo/sgx_tstd/: cargo.toml
